# TeamProject_BE

./: .gitignore  README.md  env.example  main.py  pyproject.toml  test
.github/workflows/: checks.yaml  deployment.yaml  discord-webhook.yml
apps/diary/: admin.py  apis.py  models.py  serializers.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  logging.py  prod.py
emotion/: admin.py  apis.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils 2.py
emotion/migrations/: 0001_initial.py  0002_alter_emotion_emoji.py  0002_emotiondata.py
envs/: dev.env  prod.env  prod.env.example
frienddiary/: apis.py  apps.py  serializers.py  urls.py  views.py
friendlist/: apis 2.py  apis.py  apps 2.py  apps.py  models.py  serializers.py  signals.py  urls.py  views 2.py  views.py
friendlist/migrations/: 0001_initial.py
friends/: admin.py  apis.py  models.py  serializers.py  urls.py  views.py
friends/migrations/: 0001_initial.py  0002_rename_friend_user_id_diaryfriend_friend_user.py  0003_alter_diaryfriend_unique_together.py
notifications/: admin.py  apis.py  models.py  serializers.py  urls.py
notifications/migrations/: 0001_initial 2.py  0001_initial.py  0002_initial.py
potato/potato/: ContentView.swift  Info.plist  potatoApp.swift
potato/potato.xcodeproj/: project.pbxproj
potato/potatoTests/: potatoTests.swift
qr/: apis.py  models.py  urls.py  views.py
templates/: swagger.html
users/: apis.py  auth_urls.py  models.py  serializers.py  serizalizer.py  urls.py  views.py
(+28 files in other folders)
